--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "clint-install": "npm install --prefix clint",
     "start": "node server.js",
     "server": "nodemon server.js",
-    "clint": "npm start --prefix ../frontend",
+    "clint": "npm start --prefix ../Frontend",
     "dev": "concurrently \"npm run server\" \"npm run clint\""
   },
   "keywords": [],
@@ -16,8 +16,13 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "concurrently": "^5.2.0",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
+    "gridfs-stream": "^1.1.1",
     "mongoose": "^5.9.25",
+    "multer": "^1.4.2",
+    "multer-gridfs-storage": "^4.2.0",
+    "path": "^0.12.7",
     "uuid": "^8.3.0"
   }
 }
