--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.5.2",
     "concurrently": "^5.2.0",
     "crypto": "^1.0.1",
     "express": "^4.17.1",
@@ -24,6 +25,7 @@
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.2.0",
     "path": "^0.12.7",
+    "react-bootstrap": "^1.3.0",
     "uuid": "^8.3.0"
   }
 }
