--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.20.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.2",
     "concurrently": "^5.2.0",
     "crypto": "^1.0.1",
     "express": "^4.17.1",
     "gridfs-stream": "^1.1.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.25",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.2.0",
