--- a/clint/package.json
+++ b/clint/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/polyfill": "^7.11.5",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
@@ -12,22 +13,37 @@
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "clsx": "^1.1.1",
+    "connected-react-router": "^6.8.0",
+    "css-loader": "^4.3.0",
+    "dotenv": "^8.2.0",
+    "history": "^5.0.0",
     "jquery": "^3.5.1",
     "lodash": "^4.17.20",
     "material-ui-popup-state": "^1.6.1",
+    "mixpanel-browser": "^2.39.0",
+    "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
+    "qs": "^6.9.4",
     "react": "^16.13.1",
+    "react-avatar": "^3.9.7",
     "react-dom": "^16.13.1",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.1.21",
     "react-hotjar": "^2.2.1",
+    "react-intl": "^5.8.2",
     "react-mixpanel": "^1.0.5",
     "react-redux": "^7.2.1",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-share": "^4.2.1",
+    "react-toastify": "^6.0.8",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
-    "serve": "^11.3.2"
+    "reselect": "^4.0.0",
+    "serve": "^11.3.2",
+    "styled-components": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
