--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.2",
     "concurrently": "^5.2.0",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.17.1",
     "gridfs-stream": "^1.1.1",
